--- a/web/style.css
+++ b/web/style.css
@@ -1,14 +1,14 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 80%;
-    background-color: #1f1f1f;
+    background-color: whitesmoke;
 }
 
 #wrapper {
     width: 960px;
     margin: auto;
     text-align: left;
-    color: #d9d9d9;
+    color: black;
 }
 
 p {
@@ -56,6 +56,12 @@ p {
 
 #content {
     margin: auto;
+    width: 960px;
+}
+
+#details {
+    margin: auto;
+    text-align: center;
     width: 960px;
 }
 
