--- a/web/style.css
+++ b/web/style.css
@@ -65,6 +65,11 @@ p {
     width: 960px;
 }
 
+#myChart {
+    margin: auto;
+    text-align: center;
+}
+
 .poll {
     width: 180px;
     height: 110px;
