--- a/web/style.css
+++ b/web/style.css
@@ -5,14 +5,13 @@ body {
 }
 
 #wrapper {
-    width: 960px;
     margin: auto;
-    text-align: left;
+    text-align: center;
     color: black;
 }
 
 p {
-    text-align: left;
+    text-align: center;
 }
 
 .button {
@@ -38,31 +37,24 @@ p {
 
 #addPoll {
     text-align: center;
-    width: 960px;
     margin: auto;
     margin-bottom: 10px;
 }
 
 #addPollForm {
-    text-align: left;
-    width: 400px;
+    text-align: center;
     margin: auto;
     padding: 10px;
 }
 
-#addPollForm span {
-    display: block;
-}
 
 #content {
     margin: auto;
-    width: 960px;
 }
 
 #details {
     margin: auto;
     text-align: center;
-    width: 960px;
 }
 
 #myChart {
@@ -80,7 +72,6 @@ p {
     border-radius: 8px;
     -moz-border-radius: 8px;
     -webkit-border-radius: 8px;
-    display: inline-block;
 }
 
 .poll.off {
