--- a/src/main/resources/templates/poll.html
+++ b/src/main/resources/templates/poll.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Poll</title>
-    <link rel="stylesheet" type="text/css" href="/static/bootstrap.min.css"/>
-    <link rel="stylesheet" type="text/css" href="/static/style.css"/>
+    <link rel="stylesheet" type="text/css" href="/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="/style.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="/chart.js"></script>
 </head>
 <body>
+
+<div id="details">
+</div>
 <div id="wrapper">
     <canvas id="myChart"></canvas>
 </div>
